# dirty-limericks

./: LICENSE  README.md  dirty-limericks.cabal
data/: limericks.txt
src/: Lib.hs
