name:                dirty-limericks
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nejstastnejsistene/dirty-limericks#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Johnson
maintainer:          peter@peterjohnson.io
copyright:           2015 Peter Johnson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , base-prelude
                     , text
                     , transformers
                     , vector
                     , MonadRandom
                     , Spock
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable dirty-limericks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dirty-limericks
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nejstastnejsistene/dirty-limericks
